# olga_scheduler

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  olga_scheduler_c_demo  test_olga_scheduler_capi  test_olga_scheduler_capi[1]_include.cmake  test_olga_scheduler_capi[1]_tests.cmake  test_olga_scheduler_cpp20[1]_include.cmake
examples/: background_task.cpp  basic_example.c  basic_example.cpp  task_trace.cpp
include/olga_scheduler/: olga_scheduler.h  olga_scheduler.hpp
tests/: olga_scheduler_c_demo.c  test_olga_scheduler.cpp  test_olga_scheduler_c.cpp
